Subida ejercicio 1 clase 5

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-3_Repaso/EjercicioClase3RepasoPOO/nbproject/private/
 /1.Java Basico/Ejercicios Semana 2/Clase-3_Repaso/EjercicioClase3RepasoPOO/build/
+/1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN1_HerenciaPolimorfismoEncapsulamiento/nbproject/private/
+/1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN1_HerenciaPolimorfismoEncapsulamiento/build/
