Subida ejercicio 2 dia 5

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-3_Repaso/EjercicioClase3RepasoPOO/build/
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN1_HerenciaPolimorfismoEncapsulamiento/nbproject/private/
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN1_HerenciaPolimorfismoEncapsulamiento/build/
+/1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN2_HerenciaPolimorfismo/nbproject/private/
+/1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN2_HerenciaPolimorfismo/build/
