Subida ejercicio 1 Clase 6

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN1_HerenciaPolimorfismoEncapsulamiento/build/
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN2_HerenciaPolimorfismo/nbproject/private/
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN2_HerenciaPolimorfismo/build/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN1_CollectionsClasesAbstractasInterfaces/nbproject/private/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN1_CollectionsClasesAbstractasInterfaces/build/
