Subida ejercicio 2 completo Clase 7 y 1 sin terminar

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-5/EjercicioN2_HerenciaPolimorfismo/build/
 /1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN1_CollectionsClasesAbstractasInterfaces/nbproject/private/
 /1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN1_CollectionsClasesAbstractasInterfaces/build/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioJPA_Clase7/target/
+/1.Java Basico/Ejercicios Semana 2/Clase-7/EjercicioN1_JDBC/target/
+/1.Java Basico/Ejercicios Semana 2/Clase-7/EjercicioN2_JPA/target/
