--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioJPA_Clase7/target/
 /1.Java Basico/Ejercicios Semana 2/Clase-7/EjercicioN1_JDBC/target/
 /1.Java Basico/Ejercicios Semana 2/Clase-7/EjercicioN2_JPA/target/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN2_Collections/nbproject/private/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/EjercicioN2_Collections/build/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/Caferteria/target/
+/1.Java Basico/Ejercicios Semana 2/Clase-6/Cafeteria/target/
+/2.Java Avanzado/Semana 1/Clase-2/EjercicioN1_SimulacionCentroAtencionCliente/target/
+/2.Java Avanzado/Semana 2/Clase-6/EjercicioN1_ConcesionariaAutos/target/
