subida ejercicio 2 Clase 6 Avanzado

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /1.Java Basico/Ejercicios Semana 2/Clase-6/Cafeteria/target/
 /2.Java Avanzado/Semana 1/Clase-2/EjercicioN1_SimulacionCentroAtencionCliente/target/
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN1_ConcesionariaAutos/target/
+/2.Java Avanzado/Semana 2/Clase-6/EjercicioN2_Veterinaria/target/
