--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /2.Java Avanzado/Semana 1/Clase-2/EjercicioN1_SimulacionCentroAtencionCliente/target/
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN1_ConcesionariaAutos/target/
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN2_Veterinaria/target/
+/2.Java Avanzado/Semana 2/Clases -3-5/EjercicioN1_Empleados/target/
