--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN1_ConcesionariaAutos/target/
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN2_Veterinaria/target/
 /2.Java Avanzado/Semana 2/Clases -3-5/EjercicioN1_Empleados/target/
+/EjercicioN2_GestorEventos/target/
