--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /2.Java Avanzado/Semana 2/Clase-6/EjercicioN2_Veterinaria/target/
 /2.Java Avanzado/Semana 2/Clases -3-5/EjercicioN1_Empleados/target/
 /EjercicioN2_GestorEventos/target/
+/2.Java Avanzado/Semana 2/Clase-10/EjercicioN1_Votaciones/target/
